2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-main.c: More documentation

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-main.h:
	Remove bogus xvisual call. 

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-actor.h:
	Remove mirroring related calls ( unimplemented )
	* gtk/gtk-clutter-test.c: 0 -> NULL

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-stage.c:
	* gtk/gtk-clutter.c: More docs

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* clutter/clutter-actor.c: Added some more docs.

2006-06-22  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-actor.c:
	* clutter/clutter-clone-texture.c:
	* clutter/clutter-color.c:
	* clutter/clutter-event.c:
	* clutter/clutter-group.c:
	* clutter/clutter-label.c:
	* clutter/clutter-main.c:
	* clutter/clutter-media.c:
	* clutter/clutter-rectangle.c:
	* clutter/clutter-stage.c:
	* clutter/clutter-texture.c:
	* clutter/clutter-timeline.c:
	* clutter/clutter-util.c:
	* clutter/clutter-video-texture.c:
	* configure.ac:
	Documentation updates - add section headers.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* gtk/gtk-clutter-test.c (main): Don't show the stage.

2006-06-22  Iain Holmes  <iain@openedhand.com>

	* gtk/gtk-clutter.[ch]: Rewrite to use
	clutter_stage_set_xwindow_foreign rather than GtkSocket.

	* gtk/gtk-clutter-test.c: Add fading!1!!!!11! OMGWTFBBQ!!!
	
2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* examples/video-cube.c (main): Quit on key press.

2006-06-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am: Re-fix distcheck after last commit.

2006-06-21  Matthew Allum  <mallum@openedhand.com>

	* clutter/Makefile.am:
	Make sure clutter.h included.
	* clutter/clutter-stage.c: (clutter_stage_realize),
	(clutter_stage_get_actor_at_pos):
	Select for motion events on X window.